ajustes nos readmes